[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm_state.gd" type="Script" id=2]
[ext_resource path="res://scenes/playing/playing.tscn" type="PackedScene" id=3]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://scenes/game_over.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MainMenu" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 2 )
_scene = ExtResource( 1 )

[node name="Playing" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 2 )
_scene = ExtResource( 3 )

[node name="GameOver" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 2 )
_scene = ExtResource( 6 )
